<resources>
    <string name="app_name">AceCode</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="c">C++</string>
    <string name="java">Java</string>
    <string name="js">JavaScript</string>
    <string name="python">Python</string>
    <string name="swift">Swift</string>
    <string name="title_activity_display_cquestions">C++ Programs</string>
    <string name="action_search">searchAction</string>
    <string name="action_start">startAction</string>
    <string name="search_hint">Search topics</string>

    <string-array name="cTitles">
        <item>Accessing Two-Dimensional Array Elements</item>
        <item>Area of Circle</item>
        <item>Arithmetic Operation of a Complex number using Structure</item>
        <item>Armstrong Number</item>
        <item>Array of Objects</item>
        <item>Average of Numbers</item>
        <item>Average of Positive Numbers using Recursion</item>
        <item>Basic Calculator</item>
        <item>Binary Search</item>
        <item>Binary Search Tree &amp; Operations</item>
        <item>Binary to Decimal</item>
        <item>Bubble Sort</item>
        <item>Red Black Tree</item>
    </string-array>

    <string-array name="cPrograms">
        <item>int main () { int a[5][2] = {{0,0}, {1,2}, {2,4}, {3,6}, {4,8}};}</item>
        <item>Program 1</item>
        <item>Program 2</item>
        <item>Program 3</item>
        <item>Program 4</item>
        <item>Program 5</item>
        <item>Program 6</item>
        <item>Program 7</item>
        <item>Program 8</item>
        <item>Program 9</item>
        <item>Program 10</item>
        <item>Program 11</item>
        <item>Program 12</item>
    </string-array>
</resources>
