<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="470px"
        android:layout_height="470px"
        android:text="@string/c"
        android:id="@+id/button"
        android:layout_marginTop="0dp"
        android:allowUndo="false"
        android:background="#CC8822"
        android:layout_alignWithParentIfMissing="false"
        android:textColor="#ffffff"
        android:onClick="showC"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="470px"
        android:layout_height="470px"
        android:background="#992233"
        android:textColor="#ffffff"
        android:text="@string/java"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@+id/button5"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="470px"
        android:layout_height="470px"
        android:background="#993366"
        android:textColor="#ffffff"
        android:text="@string/js"
        android:id="@+id/button3"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20px" />

    <Button
        android:layout_width="470px"
        android:layout_height="470px"
        android:background="#005522"
        android:textColor="#ffffff"
        android:text="@string/python"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="340px"
        android:layout_height="340px"
        android:background="#000055"
        android:textColor="#ffffff"
        android:text="@string/swift"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/button3"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20px" />

</RelativeLayout>
